SET(EXECUTABLE_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/../../bin)
include_directories(
  ${CMAKE_SOURCE_DIR}
  ${CMAKE_SOURCE_DIR}/external/freetype-2.4.4/Include
)

# directx tutorial
# add_subdirectory(directx_00_empty)
# add_subdirectory(directx_01_initialization)
# add_subdirectory(directx_01_initialization_reset)
# add_subdirectory(directx_02_triangle)
# add_subdirectory(directx_02_triangle_reset)
# add_subdirectory(directx_03_fx)
# add_subdirectory(directx_03_fx_reset)
# add_subdirectory(directx_04_transformation)
# add_subdirectory(directx_05_color)
# add_subdirectory(directx_06_texture)
# add_subdirectory(directx_07_light)
# add_subdirectory(directx_08_instancingHardware)
# add_subdirectory(directx_09_instancingShader)
# add_subdirectory(directx_10_normalMapping)
# add_subdirectory(directx_11_pick)
# add_subdirectory(directx_12_freetype) 
# add_subdirectory(directx_12_freetype_reset) 
 # add_subdirectory(directx_13_terrainHeightMap)
 # add_subdirectory(directx_13_terrainHeightMap_reset)
 # add_subdirectory(directx_14_terrainTexture)
# add_subdirectory(directx_14_terrainTexture_reset)
 # add_subdirectory(directx_15_terrainTextureLightingHeightBased)
 # add_subdirectory(directx_16_terrainTextureLightingHardware)
 # add_subdirectory(directx_17_terrainTextureLightingLightMapping)
# add_subdirectory(directx_18_terrainGeomipmapping)
# add_subdirectory(directx_18_terrainGeomipmapping_reset)
# add_subdirectory(directx_19_water)
# add_subdirectory(directx_19_water_flow)
# add_subdirectory(directx_20_rtt)
# add_subdirectory(directx_21_skybox)
# add_subdirectory(directx_22_skydome)
# add_subdirectory(directx_22_skydome_trip)
# add_subdirectory(directx_23_fog)
# add_subdirectory(directx_24_terrain_camera_collide)
# add_subdirectory(directx_25_particle)
# add_subdirectory(win32API_00_AccelerationLevel)
# add_subdirectory(win32API_01_Dbg)
# net tutorial
# add_subdirectory(net_00_empty) 
add_subdirectory(net_01_email) 