SET(EXECUTABLE_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/../../bin)
include_directories(
  ${CMAKE_SOURCE_DIR}
  ${CMAKE_SOURCE_DIR}/external/freetype-2.4.4/Include
  )

# directx tutorial
# add_subdirectory(directx_00_empty)
# add_subdirectory(directx_01_initialization)
# add_subdirectory(directx_01_initialization_reset)
# add_subdirectory(directx_02_triangle)
# add_subdirectory(directx_02_triangle_reset)
# add_subdirectory(directx_03_fx)
# add_subdirectory(directx_03_fx_reset)
# add_subdirectory(directx_04_transformation)
# add_subdirectory(directx_05_color)
# add_subdirectory(directx_06_texture)
# add_subdirectory(directx_07_light)
# add_subdirectory(directx_08_instancingHardware)
# add_subdirectory(directx_09_instancingShader)
# add_subdirectory(directx_10_normalMapping)
# add_subdirectory(directx_11_pick)
# add_subdirectory(directx_12_freetype) 
# add_subdirectory(directx_12_freetype_reset) 
# add_subdirectory(directx_13_terrainHeightMap)
# add_subdirectory(directx_13_terrainHeightMap_reset)
# add_subdirectory(directx_14_terrainTexture)
# add_subdirectory(directx_14_terrainTexture_reset)
# add_subdirectory(directx_15_terrainTextureLightingHeightBased)
# add_subdirectory(directx_16_terrainTextureLightingHardware)
# add_subdirectory(directx_17_terrainTextureLightingLightMapping)
# add_subdirectory(directx_18_terrainGeomipmapping)
# add_subdirectory(directx_18_terrainGeomipmapping_reset)
# add_subdirectory(directx_19_water)
# add_subdirectory(directx_19_water_flow)
# add_subdirectory(directx_20_rtt)
# add_subdirectory(directx_21_skybox)
# add_subdirectory(directx_22_skydome)
# add_subdirectory(directx_22_skydome_trip)
# add_subdirectory(directx_23_fog)
# add_subdirectory(directx_24_terrain_camera_collide)
# add_subdirectory(directx_25_particle)

# win32 api tutorial
# add_subdirectory(win32API_00_AccelerationLevel)
# add_subdirectory(win32API_01_Dbg)
# add_subdirectory(win32API_02_FindFirstChangeNotification)

# net tutorial
# add_subdirectory(net_00_empty) 
# add_subdirectory(net_01_email) 
# add_subdirectory(net_02_chat_server) 
# add_subdirectory(net_02_chat_client)
# add_subdirectory(winsock_00_empty)
# add_subdirectory(winsock_01_address)
# add_subdirectory(winsock_02_connection_oriented_server)
# add_subdirectory(winsock_02_connection_oriented_client)
# add_subdirectory(winsock_03_connectionless_server)
# add_subdirectory(winsock_03_connectionless_client)

# c programming language
# add_subdirectory(c_00_hello)
# add_subdirectory(c_01_memoryLayout)
# add_subdirectory(c_02_stdcall)
# add_subdirectory(c_03_size)
# add_subdirectory(c_04_char)
# add_subdirectory(c_05_union)
# add_subdirectory(c_06_pointer_function)
# add_subdirectory(c_07_add)
# add_subdirectory(c_08_sign)

# c++ programming language
# add_subdirectory(cplusplus_00_hello)
# add_subdirectory(cplusplus_01_class)
# add_subdirectory(cplusplus_02_reference)
# add_subdirectory(cplusplus_03_inherit)
# add_subdirectory(cplusplus_04_virtual)
# add_subdirectory(cplusplus_05_class_size)
# add_subdirectory(cplusplus_06_static_member)
# add_subdirectory(cplusplus_07_copy_constructor)
# add_subdirectory(cplusplus_08_new_delete)
# add_subdirectory(cplusplus_09_const)
# add_subdirectory(cplusplus_10_template)
# add_subdirectory(cplusplus_11_default_parameter)
# add_subdirectory(cplusplus_12_virtual_private)
# wtl tutorial
# add_subdirectory(wtl_00_hello)
# add_subdirectory(wtl_00_hello_formview)
# add_subdirectory(wtl_01_clear)
# add_subdirectory(wtl_01_clear_form)
# add_subdirectory(wtl_02_triangle)
# add_subdirectory(wtl_02_triangle_form)
# add_subdirectory(wtl_03_fx)
# add_subdirectory(wtl_04_freetype)
# add_subdirectory(wtl_00_hello_visible)
# add_subdirectory(wtl_05_mz)
# add_subdirectory(wtl_06_treeview)
# add_subdirectory(wtl_07_Terrain_Mesh)
# add_subdirectory(wtl_08_flash)
# add_subdirectory(wtl_09_mz_withoutMaterial)
# add_subdirectory(wtl_10_mz_group)
# add_subdirectory(wtl_11_mz_group_enitty_mesh)
# add_subdirectory(wtl_12_mz_skeleton)
# add_subdirectory(wtl_13_freetype)
# add_subdirectory(wtl_14_mz_skin)
# add_subdirectory(wtl_15_list)
# add_subdirectory(wtl_16_mz_skin_split)
# add_subdirectory(wtl_17_model_preview)
# add_subdirectory(wtl_18_model_material)
# add_subdirectory(wtl_19_model_animation)
# add_subdirectory(wtl_20_model_material_animation)
# add_subdirectory(wtl_21_model_terrain)
# add_subdirectory(wtl_21_model_terrain_form)
# add_subdirectory(wtl_22_terrain)
# add_subdirectory(wtl_23_group)
# add_subdirectory(wtl_24_CWindowImp)
# add_subdirectory(wtl_25_CDialogImp)
# add_subdirectory(wtl_26_CListBox)
# add_subdirectory(wtl_27_CContainedWindow)
# add_subdirectory(wtl_28_ChainMsgMap)
# add_subdirectory(wtl_29_CFrameWindowImpl)
# add_subdirectory(wtl_30_CUpdateUI)
# add_subdirectory(wtl_31_MultiPaneStatus)
# add_subdirectory(wtl_32_CWinDataExchange)
# add_subdirectory(wtl_33_SubclassWindow)
# add_subdirectory(wtl_34_COwnerDraw)
# add_subdirectory(wtl_35_COwnerDraw)
# add_subdirectory(wtl_36_CTreeViewCtrlEx)
# add_subdirectory(wtl_37_CBitmapButton)
# add_subdirectory(wtl_38_CCheckListViewCtrl)
# add_subdirectory(wtl_39_CHyperLink)
# add_subdirectory(wtl_40_CSplitterImpl)
# add_subdirectory(wtl_41_CPaneContainer)
# add_subdirectory(wtl_42_CPropertySheetWindow)
# add_subdirectory(wtl_43_PropertyList)

# add_subdirectory(ModelViewer_00_hello)
# add_subdirectory(ModelViewer_01_travel)
# add_subdirectory(SceneEditor_00_hello)
# assembly language
# add_subdirectory(assembly_00_MMX)

# flash
# add_subdirectory(flash_01_hello)

# terrain
# add_subdirectory(Terrain_00_hello)
# add_subdirectory(Terrain_01_heightmap)
# add_subdirectory(Terrain_02_geomipmapping)

# programmingWindows
# add_subdirectory(ProgrammingWindows/00_hello)
# add_subdirectory(ProgrammingWindows/01_unicode)

# Ä£ÐÍÔ¤ÀÀ£¬±à¼­
# add_subdirectory(Model_00_hello)
# add_subdirectory(Model_01_clear)
# add_subdirectory(Model_02_triangle)
# add_subdirectory(Model_03_freetype)
# add_subdirectory(Model_04_treeview)
# add_subdirectory(Model_05_preview)
# add_subdirectory(Model_06_property)
# add_subdirectory(Model_07_propertyTree)
# add_subdirectory(Model_08_terrain_chunk)
# add_subdirectory(Model_09_terrain_chunk_mesh)
# add_subdirectory(Model_10_terrain_chunk_height)
add_subdirectory(Model_11_terrain_chunk_painter)
# fmod
# add_subdirectory(fmod_00_hello)
# add_subdirectory(fmod_01_new)
# add_subdirectory(fmod_02_old)